# wizbook

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
scripts/: README.md  ascii_printer.py  list_project_contents.py  rich_pbar.py
src/wizbook/: config.py  io.py  viz.py
tests/: filesysops.py  printables.py
